fixed new added ew url
